// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterList Snapshot Tests > should match snapshot with date filter 1`] = `
<div>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Date de création est égal à 15/10/2023
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with different comparators 1`] = `
<div>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Name débute par Test
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Email termine par @example.com
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Role est différent de guest
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with empty filters 1`] = `<div />`;

exports[`FilterList Snapshot Tests > should match snapshot with multiple filters 1`] = `
<div>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Username contient admin
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Status est égal à active
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Created After est après 01/01/2023
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with numeric filter 1`] = `
<div>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Age est supérieur à 25
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with single string filter 1`] = `
<div>
  <button
    class=_tag _tag--information _tag--lg mr-3
    data-ods=tag
    data-testid=filter-list_tag_item
    type=button
  >
    Nom d'utilisateur contient john_doe
    <span
      class=_icon _icon--xmark _tag__close
      data-ods=icon
      role=presentation
    />
  </button>
</div>
`;
